[lworld] Crash in add_migrated_value_classes after merging JDK-8350550

XMLWordPrintable

      All AOT tests failing (e.g runtime/cds/appcds/aotCache/HelloAOTCache.java)

      Assertion (temp added the class name):

      # Internal Error (/home/dsimms/devel/valhalla_merging/open/src/hotspot/share/classfile/systemDictionary.cpp:198), pid=22665, tid=22668
      # assert(ik != nullptr) failed: Must exist java/lang/Byte

      From:

      V [libjvm.so+0x191f9da] add_migrated_value_classes(ClassLoaderData*)::{lambda(Symbol*)#1}::operator()(Symbol*) const+0x8a (systemDictionary.cpp:198)
      V [libjvm.so+0x1929f58] void vmSymbols::migrated_class_names_do<add_migrated_value_classes(ClassLoaderData*)::{lambda(Symbol*)#1}>(add_migrated_value_classes(ClassLoaderData*)::{lambda(Symbol*)#1})+0x4a (vmSymbols.hpp:908)
      V [libjvm.so+0x191fad5] add_migrated_value_classes(ClassLoaderData*)+0x95 (systemDictionary.cpp:203)
      V [libjvm.so+0x191fb63] SystemDictionary::register_loader(Handle, bool)+0x7f (systemDictionary.cpp:216)
      V [libjvm.so+0x15a97de] Modules::init_archived_modules(JavaThread*, Handle, Handle)+0x206 (modules.cpp:742)
      V [libjvm.so+0xa5a890] ClassLoaderDataShared::restore_archived_modules_for_preloading_classes(JavaThread*)+0x1ae (classLoaderDataShared.cpp:293)
      V [libjvm.so+0x68b1e1] AOTLinkedClassBulkLoader::preload_classes_impl(JavaThread*)+0x7b (aotLinkedClassBulkLoader.cpp:66)
      V [libjvm.so+0x68b146] AOTLinkedClassBulkLoader::preload_classes(JavaThread*)+0x18 (aotLinkedClassBulkLoader.cpp:57)
      V [libjvm.so+0x1a40b14] vmClasses::resolve_all(JavaThread*)+0x8c (vmClasses.cpp:123)
      V [libjvm.so+0x1925b90] SystemDictionary::initialize(JavaThread*)+0x8e (systemDictionary.cpp:1741)

      Can assume the value based class was not actually in the archive as expected.

            Assignee:
            Matias Saavedra Silva
            Reporter:
            David Simms
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: