8370217: [lworld] Crash in add_migrated_value_classes after merging JDK-8350550

Reviewed-by: coleenp, fparain