src/hotspot/share/classfile/systemDictionary.cpp
@@ -215,7 +215,7 @@ ClassLoaderData* SystemDictionary::register_loader(Handle class_loader, bool cre
       return ClassLoaderData::the_null_class_loader_data();
     } else {
       ClassLoaderData* cld = ClassLoaderDataGraph::find_or_create(class_loader);
-      if (EnableValhalla) {
+      if (Arguments::enable_preview() && EnableValhalla) {
         add_migrated_value_classes(cld);
       }
       return cld;
